--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+span.flicking-pagination-bullet-active {
+	background-color: #a99e73;
+	width: 10px;
+	height: 10px;
+}
