--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,23 @@
 	--color-primary: #4d1939;
 }
 
+.profile-input-group {
+	@apply space-x-5 flex items-center;
+}
+
+.profile-input-group input[type="text"] {
+	@apply input input-sm w-1/3 max-w-xs;
+}
+
+.profile-input-group span {
+	@apply text-lg
+}
+
+.dp__theme_dark {
+	--dp-primary-color: #9d00b2;
+}
+
+
 span.flicking-pagination-bullet-active {
 	background-color: #a99e73;
 	width: 10px;
